--- a/header.html
+++ b/header.html
@@ -12,12 +12,12 @@
  
   </head>
   <body>
-    <div class="bg-dark text-white py-2 small">
+    <div class="bg-dark text-white py-1 small">
       <div class="container d-flex ">
         <div><i class="bi bi-envelope"></i> service@premier-datacom.com</div>
         <li class="nav-item mx-2 d-block">
               <div
-                style="width: 1px; height: 34px; background-color: #ccc"
+                style="width: 1px; height: 24px; background-color: #ccc"
               ></div>
             </li>
         <div>
@@ -65,7 +65,7 @@
               ></div>
             </li>
             <li class="nav-item ms-3">
-              <a class="btn btn-dark text-light px-4" href="#">Get a Quote</a>
+              <a class="btn btn-dark text-light px-4" href="/contact-us.html">Get a Quote</a>
             </li>
           </ul>
         </div>
