feat: Update About Us page link, add Blogs page, and enhance header navigation
- Changed "Get a Quote" button link on About Us page to point to the Contact Us page.
- Created a new Blogs page with a hero section and dynamic blog post rendering.
- Updated header navigation to link to the new Blogs page.
- Increased logo width in the header for better visibility.

--- a/about-us.html
+++ b/about-us.html
@@ -46,7 +46,7 @@
               From structured cabling to security systems, we offer end-to-end
               services built for modern businesses.
             </p>
-            <a href="#" class="btn btn-light btn-lg mt-3">Get a Quote</a>
+            <a href="/contact-us.html" class="btn btn-light btn-lg mt-3">Get a Quote</a>
           </div>
         </div>
       </div>
