--- a/header.html
+++ b/header.html
@@ -33,7 +33,7 @@
           <img
             src="/PREMIER-DATACOM/images/datacom-logo.svg"
             alt="Premier Datacom"
-            width="100"
+            width="150"
             class="me-2"
           />
         </a>
@@ -57,7 +57,7 @@
             <li class="nav-item">
               <a class="nav-link" href="/about-us.html">About us</a>
             </li>
-            <li class="nav-item"><a class="nav-link" href="#">Blog</a></li>
+            <li class="nav-item"><a class="nav-link" href="/blogs.html">Blog</a></li>
             <li class="nav-item"><a class="nav-link" href="/contact-us.html">Contact</a></li>
             <li class="nav-item mx-4 d-none d-lg-block">
               <div
