--- a/about-us.html
+++ b/about-us.html
@@ -37,16 +37,15 @@
                 style="height: 20px !important"
               />
               <span class="text-uppercase small fw-semibold text-light">
-                Service Details
+                About Us
               </span>
             </div>
 
-            <h1 class="display-5 fw-bold">What We Offer</h1>
+            <h1 class="display-5 fw-bold">Who we are</h1>
             <p class="lead mt-3">
-              From structured cabling to security systems, we offer end-to-end
-              services built for modern businesses.
+              Delivering reliable technology infrastructure with over 20 years of experience, innovation, and trusted client partnerships.
             </p>
-            <a href="/contact-us.html" class="btn btn-light btn-lg mt-3">Get a Quote</a>
+            <!-- <a href="/contact-us.html" class="btn btn-light btn-lg mt-3">Get a Quote</a> -->
           </div>
         </div>
       </div>
