--- a/footer.html
+++ b/footer.html
@@ -30,13 +30,12 @@
       <div class="container">
         <div class="row" style="text-align: left">
           <div class="col-md-4">
-            <a href="/"
-              >
-            <img
-              src="/PREMIER-DATACOM/images/footerlogo.svg"
-              alt="Logo"
-              class="custom-footer-logo"
-            />
+            <a href="/">
+              <img
+                src="/PREMIER-DATACOM/images/footerlogo.svg"
+                alt="Logo"
+                class="custom-footer-logo"
+              />
             </a>
             <p class="custom-footer-text">
               Central Texas’s Premier Technology Systems and Cabling Contractor
@@ -46,58 +45,89 @@
           <div class="col-md-4">
             <h5 class="custom-footer-heading">Our Services</h5>
             <ul class="custom-footer-list">
-              <a href="/our-services/fiber-optic-cabling/" class="custom-footer-link">
               <li>
-                <i class="bi bi-chevron-double-right"></i> Fiber Optic Cabling
+                <a
+                  href="/our-services/fiber-optic-cabling/"
+                  class="custom-footer-link"
+                >
+                  <i class="bi bi-chevron-double-right"></i> Fiber Optic Cabling
+                </a>
               </li>
-              </a>
-              <a href="/our-services/structured-data-cabling/" class="custom-footer-link">
               <li>
-                <i class="bi bi-chevron-double-right"></i>
-                Structured Data Cabling
+                <a
+                  href="/our-services/structured-data-cabling/"
+                  class="custom-footer-link"
+                >
+                  <i class="bi bi-chevron-double-right"></i>
+                  Structured Data Cabling
+                </a>
               </li>
-              </a>
-              <a href="/our-services/security-cameras/" class="custom-footer-link">
               <li>
-                <i class="bi bi-chevron-double-right"></i> Security Cameras
-              </li></a>
-              <a href="/our-services/access-control/" class="custom-footer-link">
-              <li><i class="bi bi-chevron-double-right"></i> Access Control</li></a>
-              <a href="/our-services/audio-visual/" class="custom-footer-link">
-              <li><i class="bi bi-chevron-double-right"></i> Audio Visual</li>
-              </a>
-              <a href="/our-services/cellular-das-errcs/" class="custom-footer-link">
-              <li>
-                <i class="bi bi-chevron-double-right"></i> Cellular DAS & ERRCS
+                <a
+                  href="/our-services/security-cameras/"
+                  class="custom-footer-link"
+                >
+                  <i class="bi bi-chevron-double-right"></i> Security Cameras
+                </a>
               </li>
-              </a>
+              <li>
+                <a
+                  href="/our-services/access-control/"
+                  class="custom-footer-link"
+                >
+                  <i class="bi bi-chevron-double-right"></i> Access Control
+                </a>
+              </li>
+              <li>
+                <a
+                  href="/our-services/audio-visual/"
+                  class="custom-footer-link"
+                >
+                  <i class="bi bi-chevron-double-right"></i> Audio Visual
+                </a>
+              </li>
+              <li>
+                <a
+                  href="/our-services/cellular-das-errcs/"
+                  class="custom-footer-link"
+                >
+                  <i class="bi bi-chevron-double-right"></i> Cellular DAS &
+                  ERRCS
+                </a>
+              </li>
             </ul>
           </div>
 
           <div class="col-md-4">
             <h5 class="custom-footer-heading">Contact Us</h5>
             <ul class="custom-footer-list custom-footer-contact">
-              <li>
+              <li class="custom-footer-link">
                 <i class="bi bi-geo-alt"></i> 9411 Neils Thompson Drive<br />
                 Austin, TX 78758
               </li>
-              <a href="mailto: service@premier-datacom.com" class="custom-footer-link">
               <li>
-                <i class="bi bi-envelope"></i> service@premier-datacom.com
+                <a
+                  href="mailto: service@premier-datacom.com"
+                  class="custom-footer-link"
+                >
+                  <i class="bi bi-envelope"></i> service@premier-datacom.com
+                </a>
               </li>
-              </a>
-              <li><i class="bi bi-telephone"></i> (737) 615-7037</li>
-              <a href="#" class="custom-footer-link">
-              <li><i class="bi bi-globe"></i> www.premier-datacom.com</li>
-              </a>
+              <li class="custom-footer-link">
+                <i class="bi bi-telephone"></i> (737) 615-7037
+              </li>
+              <li>
+                <a href="#" class="custom-footer-link">
+                  <i class="bi bi-globe"></i> www.premier-datacom.com
+                </a>
+              </li>
             </ul>
           </div>
         </div>
-
+      </div>
     </footer>
     <div class="custom-footer-bottom py-4 text-white">
       © 2005 – 2024 Premier DataCom, Inc. All rights reserved.
-    </div>
     </div>
   </body>
 </html>
