Enhance website layout and functionality
- Updated the "Contact Us" page with a new decorative line element for improved aesthetics.
- Modified the footer to make the phone number clickable for easier access.
- Improved header layout by adding a mailto link for the email address.
- Changed background images to WebP format for better performance.
- Enhanced service sections with decorative lines for visual appeal.
- Updated button styles and spacing for better user experience.
- Added partner section enhancements across various service pages.
- Refined testimonial slider functionality and appearance.

--- a/about-us.html
+++ b/about-us.html
@@ -26,11 +26,11 @@
     </script>
 
     <!-- Hero Section -->
-    <section class="hero-section text-white d-flex align-items-center" style="background: url(/PREMIER-DATACOM/images/about-use-hero-section.png) no-repeat center center/cover;">
+    <section class="hero-section text-white d-flex align-items-center" style="background: url(/PREMIER-DATACOM/images/about-use-hero-section.webp) no-repeat center center/cover;">
       <div class="container">
         <div class="row">
           <div class="col-md-7">
-            <div class="d-flex align-items-center gap-2 mb-3">
+            <div class="d-flex align-items-center gap-3 mb-3">
               <img
                 src="/PREMIER-DATACOM/images/Border.svg"
                 alt="Border"
@@ -41,7 +41,7 @@
               </span>
             </div>
 
-            <h1 class="display-5 fw-bold">Who we are</h1>
+            <h1 class="display-5 text-uppercase fw-bold">Who we are</h1>
             <p class="lead mt-3">
               Delivering reliable technology infrastructure with over 20 years of experience, innovation, and trusted client partnerships.
             </p>
@@ -54,7 +54,7 @@
     <div class="container" style="margin-top: 50px">
      
       <div class="row about-row-equal-height p-4">
-         <div class="d-flex align-items-center gap-2 mb-3">
+         <div class="d-flex align-items-center gap-3 mb-3">
         <img
           src="/PREMIER-DATACOM/images/Black Border.svg"
           alt="Border"
@@ -66,7 +66,7 @@
       </div>
         <div class="col-md-6 col-12 p-0">
           <img
-            src="/PREMIER-DATACOM/images/building trust.png"
+            src="/PREMIER-DATACOM/images/building-trust.webp"
             alt="Premier DataCom Image"
             class="about-image-container"
           />
@@ -142,6 +142,12 @@
 
       <div class="contact-section">
         <h2>Let’s Start the Conversation</h2>
+          <div
+          class="d-flex justify-content-center align-items-center gap-1 mb-2"
+        >
+          <div class="line"></div>
+          <div class="halfline"></div>
+        </div>
         <p>
           Send us a message — we’re here to help with expert advice, tailored
           solutions, and quick support. Whether it’s a small inquiry or a
