--- a/contact-us.html
+++ b/contact-us.html
@@ -24,7 +24,13 @@
 
     <div style="background-color: #f3f4f5">
       <div class="py-3 biz-form-wrapper px-4 container">
-        <h3 class="fw-bold my-4 text-center">Contact Us</h3>
+        <h3 class="fw-bold mt-4 text-center">Contact Us</h3>
+          <div
+          class="d-flex justify-content-center align-items-center gap-1 mb-2"
+        >
+          <div class="line"></div>
+          <div class="halfline"></div>
+        </div>
         <form id="contact-form">
           <div class="row gy-4">
             <div class="col-12">
