--- a/footer.html
+++ b/footer.html
@@ -114,7 +114,10 @@
                 </a>
               </li>
               <li class="custom-footer-link">
-                <i class="bi bi-telephone"></i> (737) 615-7037
+                <i class="bi bi-telephone"></i>
+                <a href="tel:7376157037" style="text-decoration: none;">
+                  (737) 615-7037
+                </a>
               </li>
               <li>
                 <a href="#" class="custom-footer-link">
