--- a/our-services/access-control/index.html
+++ b/our-services/access-control/index.html
@@ -29,14 +29,14 @@
     <section
       class="hero-section text-white d-flex align-items-center"
       style="
-        background: url(/PREMIER-DATACOM/images/services-hero-section.png)
+        background: url(/PREMIER-DATACOM/images/services-hero-section.webp)
           no-repeat center center/cover;
       "
     >
       <div class="container">
         <div class="row">
           <div class="col-md-7">
-            <div class="d-flex align-items-center gap-2 mb-3">
+            <div class="d-flex align-items-center gap-3 mb-3">
               <img
                 src="/PREMIER-DATACOM/images/Border.svg"
                 alt="Border"
@@ -48,6 +48,7 @@
             </div>
 
             <h1 class="display-5 fw-bold text-uppercase">Access Control</h1>
+
             <p class="lead mt-3">
               Efficient and future-ready cabling systems that ensure seamless
               data transmission and long-term performance.
@@ -59,7 +60,7 @@
 
     <div class="container" style="margin-top: 50px">
       <div class="row about-row-equal-height p-4">
-        <div class="d-flex align-items-center gap-2 mb-3">
+        <div class="d-flex align-items-center gap-3 mb-4">
           <img
             src="/PREMIER-DATACOM/images/Black Border.svg"
             alt="Border"
@@ -71,7 +72,7 @@
         </div>
         <div class="col-md-6 col-12 p-0">
           <img
-            src="/PREMIER-DATACOM/images/access-control-image.png"
+            src="/PREMIER-DATACOM/images/access-control-image.webp"
             alt="Premier DataCom Image"
             class="about-image-container"
           />
@@ -209,6 +210,12 @@
 
       <div class="contact-section">
         <h2>Let’s Start the Conversation</h2>
+          <div
+          class="d-flex justify-content-center align-items-center gap-1 mb-2"
+        >
+          <div class="line"></div>
+          <div class="halfline"></div>
+        </div>
         <p>
           Send us a message — we’re here to help with expert advice, tailored
           solutions, and quick support. Whether it’s a small inquiry or a
@@ -253,6 +260,12 @@
       <div class="container-fluid">
         <div class="text-center">
           <h2 class="partners-title">Our Partners</h2>
+            <div
+          class="d-flex justify-content-center align-items-center gap-1 mb-2"
+        >
+          <div class="line"></div>
+          <div class="halfline"></div>
+        </div>
           <p class="partners-subtitle">
             We proudly collaborate with industry leaders and trusted vendors to
             deliver exceptional technology solutions.
