--- a/header.html
+++ b/header.html
@@ -4,22 +4,28 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Header</title>
-     <link
+    <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
       rel="stylesheet"
-    />  
-    <link  rel="stylesheet" href="/PREMIER-DATACOM/css/styles.css" />
- 
+    />
+    <link rel="stylesheet" href="/PREMIER-DATACOM/css/styles.css" />
   </head>
   <body>
-    <div class="bg-dark text-white py-1 small">
-      <div class="container d-flex ">
-        <div><i class="bi bi-envelope"></i> service@premier-datacom.com</div>
+    <div class="subheader text-white py-2 small">
+      <div class="container d-flex">
+        <div>
+          <a
+            href="mailto:service@premier-datacom.com"
+            class="text-white text-decoration-none"
+            target="_blank"
+            rel="noopener noreferrer"
+          >
+            <i class="bi bi-envelope"></i> service@premier-datacom.com
+          </a>
+        </div>
         <li class="nav-item mx-2 d-block">
-              <div
-                style="width: 1px; height: 24px; background-color: #ccc"
-              ></div>
-            </li>
+          <div style="width: 1px; height: 24px; background-color: #ccc"></div>
+        </li>
         <div>
           <i class="bi bi-geo-alt"></i> 9411 Neils Thompson Drive Austin, TX
           78758
@@ -57,15 +63,21 @@
             <li class="nav-item">
               <a class="nav-link" href="/about-us.html">About us</a>
             </li>
-            <li class="nav-item"><a class="nav-link" href="/blogs.html">Blog</a></li>
-            <li class="nav-item"><a class="nav-link" href="/contact-us.html">Contact</a></li>
+            <!-- <li class="nav-item">
+              <a class="nav-link" href="/blog.html">Blog</a>
+            </li> -->
+            <li class="nav-item">
+              <a class="nav-link" href="/contact-us.html">Contact</a>
+            </li>
             <li class="nav-item mx-4 d-none d-lg-block">
               <div
                 style="width: 1px; height: 44px; background-color: #102039"
               ></div>
             </li>
             <li class="nav-item ms-3">
-              <a class="btn btn-dark text-light px-4" href="/contact-us.html">Get a Quote</a>
+              <a class="btn  text-light px-4 get-quote-btn" href="/contact-us.html"
+                >Get a Quote</a
+              >
             </li>
           </ul>
         </div>
