--- a/our-services/cellular-das-errcs/index.html
+++ b/our-services/cellular-das-errcs/index.html
@@ -29,14 +29,14 @@
     <section
       class="hero-section text-white d-flex align-items-center"
       style="
-        background: url(/PREMIER-DATACOM/images/services-hero-section.png)
+        background: url(/PREMIER-DATACOM/images/services-hero-section.webp)
           no-repeat center center/cover;
       "
     >
       <div class="container">
         <div class="row">
           <div class="col-md-7">
-            <div class="d-flex align-items-center gap-2 mb-3">
+            <div class="d-flex align-items-center gap-3 mb-3">
               <img
                 src="/PREMIER-DATACOM/images/Border.svg"
                 alt="Border"
@@ -61,7 +61,7 @@
 
     <div class="container" style="margin-top: 50px">
       <div class="row about-row-equal-height p-4">
-        <div class="d-flex align-items-center gap-2 mb-3">
+        <div class="d-flex align-items-center gap-3 mb-4">
           <img
             src="/PREMIER-DATACOM/images/Black Border.svg"
             alt="Border"
@@ -74,7 +74,7 @@
 
         <div class="col-md-6 col-12 p-0">
           <img
-            src="/PREMIER-DATACOM/images/cellular-das-errcs-image.png"
+            src="/PREMIER-DATACOM/images/cellular-das-errcs-image.webp"
             alt="Premier DataCom Image"
             class="about-image-container"
           />
@@ -243,6 +243,12 @@
 
       <div class="contact-section">
         <h2>Let’s Start the Conversation</h2>
+          <div
+          class="d-flex justify-content-center align-items-center gap-1 mb-2"
+        >
+          <div class="line"></div>
+          <div class="halfline"></div>
+        </div>
         <p>
           Send us a message — we’re here to help with expert advice, tailored
           solutions, and quick support. Whether it’s a small inquiry or a
@@ -287,6 +293,12 @@
       <div class="container-fluid">
         <div class="text-center">
           <h2 class="partners-title">Our Partners</h2>
+            <div
+          class="d-flex justify-content-center align-items-center gap-1 mb-2"
+        >
+          <div class="line"></div>
+          <div class="halfline"></div>
+        </div>
           <p class="partners-subtitle">
             We proudly collaborate with industry leaders and trusted vendors to
             deliver exceptional technology solutions.
