--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Premier Datacom</title>
-    
+
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -93,42 +93,42 @@
       const services = [
         {
           title: "Structured Data Cabling",
-          desc: "Advanced security cameras for homes, offices, and businesses ensuring visibility, safety, and peace of mind.",
+          desc: "By choosing to build green, you aremaking an effort to reduce the burden on the environment and also add value to your....",
           icon: "/PREMIER-DATACOM/images/Structured Data Cabling.png",
           bgImage: "/PREMIER-DATACOM//images/bg-image.webp",
           serviceLink: "/our-services/structured-data-cabling/",
         },
         {
           title: "Fiber Optic Cabling",
-          desc: "Advanced security cameras for homes, offices, and businesses ensuring visibility, safety, and peace of mind.",
+          desc: "Fiber optic cabling is typical for high-speed data transmission that uses light waves to transmit information across vast distances....",
           icon: "/PREMIER-DATACOM/images/fiber-pptic.png",
           bgImage: "/PREMIER-DATACOM//images/bg-image.webp",
           serviceLink: "/our-services/fiber-optic-cabling/",
         },
         {
           title: "Video Surveillance System",
-          desc: "Advanced security cameras for homes, offices, and businesses ensuring visibility, safety, and peace of mind.",
+          desc: "Security camera systems are essential for maintaining safety and monitoring activities in various environments, such as commercial....",
           icon: "/PREMIER-DATACOM/images/video-surveillance.png",
           bgImage: "/PREMIER-DATACOM//images/bg-image.webp",
           serviceLink: "/our-services/security-cameras/",
         },
         {
           title: "Access Control",
-          desc: "Advanced security cameras for homes, offices, and businesses ensuring visibility, safety, and peace of mind.",
+          desc: "Access control systems are essential components of building security, providing a means to regulate who can access different....",
           icon: "/PREMIER-DATACOM/images/access-control.png",
           bgImage: "/PREMIER-DATACOM//images/bg-image.webp",
           serviceLink: "/our-services/access-control/",
         },
         {
           title: "Audio Visual",
-          desc: "Advanced security cameras for homes, offices, and businesses ensuring visibility, safety, and peace of mind.",
+          desc: "Audio Visual (AV) systems integrate sound, video, and lighting technologies to enhance communication and interaction in various...",
           icon: "/PREMIER-DATACOM/images/audio-visual.png",
           bgImage: "/PREMIER-DATACOM//images/bg-image.webp",
           serviceLink: "/our-services/audio-visual/",
         },
         {
           title: "Cellular DAS & ERRCS",
-          desc: "Advanced security cameras for homes, offices, and businesses ensuring visibility, safety, and peace of mind.",
+          desc: "The Growing Need for Advanced Communication Systems: As buildings become larger and more complex, the need for effective communication systems like....",
           icon: "/PREMIER-DATACOM/images/cellular-das-errcs.png",
           bgImage: "/PREMIER-DATACOM//images/bg-image.webp",
           serviceLink: "/our-services/cellular-das-errcs/",
@@ -211,7 +211,7 @@
           <div class="col-md-7">
             <div class="d-flex align-items-center gap-3 mb-3">
               <img
-                src="/PREMIER-DATACOM/images/Border.svg"
+                src="/PREMIER-DATACOM/images/small-border.svg"
                 alt="Border"
                 style="height: 20px"
               />
@@ -374,7 +374,6 @@
           title: "CEO",
           stars: [1, 1, 1, 1, 0],
         },
-        
       ];
 
       // Function to render star icons based on rating
